k8s/core/cert-manager/extra/base/network-policy.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-egress-kube-apiserver
spec:
  endpointSelector: {}
  ingress:
    - fromEntities:
        - kube-apiserver
  egress:
    - toEntities:
        - kube-apiserver
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-egress-cloudflare
spec:
  endpointSelector: {}
  egress:
    - toCIDR:
        - 209.112.97.53/32
        - 2001:67c:17fc::53/128

        - 1.1.1.1/32
        - 1.0.0.1/32
        - 2606:4700:4700::1111/128
        - 2606:4700:4700::1001/128
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
            - port: "5353"
              protocol: ANY
